--- a/views/online_certification_view.xml
+++ b/views/online_certification_view.xml
@@ -2,10 +2,11 @@
     <data>
         <template id="certification_web_view">
             <t t-call="website.layout">
+                <t t-call="web.html_container">
 
-                <h1>PAGE TEST</h1>
+                    <h1>PAGE TEST</h1>
 
-
+                </t>
                 <!--<t t-set="layout_values"
                    t-value="object.survey_id.certification_report_layout.split('_') if object.survey_id.certification_report_layout else ['not', 'thing']"/>
                 <t t-set="layout_template" t-value="layout_values[0]"/>
