--- a/views/online_certification_view.xml
+++ b/views/online_certification_view.xml
@@ -6,7 +6,7 @@
                     <div class="row">
                         <div class="col-12 text-center">
                             <h1>Certification Information</h1>
-                            <h2>User Input ID: <t t-esc="user_input.id" /></h2>
+                            <p>User Input ID: <t t-esc="user_input.id" /></p>
                         </div>
                     </div>
                 </div>
